--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
         .tbl{
             position: relative;
-            /* border: solid 1px; */
+            border: solid 1px;
             width: 380px;
             height: 350px;
             overflow: hidden;
