--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             font-size: large;
             font-style: oblique;
             font-weight: 600;
+            width: 200px;
+
         }
         input{
             width: 68px;
